organised HTML into BEM components

--- a/index.html
+++ b/index.html
@@ -26,11 +26,31 @@
 		/>
 	</head>
 	<body>
-		<h1><span>We're</span> coming soon</h1>
-
-		Hello fellow shoppers! We're currently building our new fashion store.
-		Add your email below to stay up-to-date with announcements and our
-		launch deals. Email Address
+		<div class="container">
+			<div class="container__content">
+				<h1><span>We're</span> coming soon</h1>
+				<p class="container__main-text-content">
+					Hello fellow shoppers! We're currently building our new
+					fashion store. Add your email below to stay up-to-date with
+					announcements and our launch deals.
+				</p>
+				<form>
+					<input
+						type="text"
+						name="email"
+						placeholder="Email Address"
+						id="email"
+					/>
+					<button
+						id="btn"
+						type="submit"
+					>
+						<img src="images/icon-arrow.svg" />
+					</button>
+				</form>
+			</div>
+			<div class="container__image"></div>
+		</div>
 
 		<footer>
 			<p class="attribution">
