--- a/index.html
+++ b/index.html
@@ -18,6 +18,19 @@
 		<title>Frontend Mentor | Base Apparel coming soon page</title>
 
 		<!-- Fonts -->
+		<link
+			rel="preconnect"
+			href="https://fonts.googleapis.com"
+		/>
+		<link
+			rel="preconnect"
+			href="https://fonts.gstatic.com"
+			crossorigin
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap"
+			rel="stylesheet"
+		/>
 
 		<!-- Custom Stylesheet -->
 		<link
@@ -28,7 +41,8 @@
 	<body>
 		<div class="container">
 			<div class="container__content">
-				<h1><span>We're</span> coming soon</h1>
+				<img src="images/logo.svg" />
+				<h1 class="main-title"><span>We're</span> coming soon</h1>
 				<p class="container__main-text-content">
 					Hello fellow shoppers! We're currently building our new
 					fashion store. Add your email below to stay up-to-date with
