added hero image in mobile layout

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 						src="images/logo.svg"
 						alt="Base Apparel Logo"
 					/>
+					<div class="mobile-image"></div>
 					<h1 class="main-title"><span>We're</span> coming soon</h1>
 					<p class="main-text-content">
 						Hello fellow shoppers! We're currently building our new
@@ -95,7 +96,7 @@
 					</footer>
 				</div>
 			</div>
-			<div class="container__image"></div>
+			<div class="container__desktop-image"></div>
 		</div>
 	</body>
 </html>
