removed focus on mobile view

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 							name="email"
 							placeholder="Email Address"
 							id="email"
+							autocomplete="off"
+							required
 						/>
 						<button
 							class="btn"
