--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
 							placeholder="Email Address"
 							id="email"
 							autocomplete="off"
-							required
 						/>
 						<button
 							class="btn"
@@ -78,9 +77,7 @@
 							src="images/icon-error.svg"
 							alt="Error Icon"
 						/>
-						<small class="error-message"
-							>Please provide a valid email address</small
-						>
+						<small class="error-message"></small>
 					</form>
 
 					<footer>
@@ -100,5 +97,6 @@
 			</div>
 			<div class="container__desktop-image"></div>
 		</div>
+		<script src="js/script.js"></script>
 	</body>
 </html>
